--- a/src/styles.css
+++ b/src/styles.css
@@ -196,6 +196,28 @@ h1 {
   border: 0;
 }
 
+.keyboard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+}
+
+.keyboard-row {
+  display: flex;
+  gap: 5px;
+}
+
+.key {
+  width: 50px;
+  height: 50px;
+  border-radius: 5px;
+  background-color: var(--color-gray-900);
+  cursor: pointer;
+  text-align: center;
+  font-weight: bold;
+}
+
 /*
   Modal styles
 
